# CSPV

./: README.md  pyproject.toml  requirements.txt
src/: cspv.py
