[build-system]
requires = ["setuptools>=61.0", "art==5.9", "pwinput >= 1.0.3", "requests~=2.28.2"]
build-backend = "setuptools.build_meta"

[project]
name = "CSPV"
version = "0.5.1"
authors = [
  { name="Ty Legette", email="tyron.j.legette@wellsfargo.com" },
]
description = "ICS CSP-Validator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://wfs-github.wellsfargo.com/a153614/CSPV"
"Bug Tracker" = "https://wfs-github.wellsfargo.com/a153614/CSPV/issues"